--- a/property/semi-d/bukit-jelutong/index.html
+++ b/property/semi-d/bukit-jelutong/index.html
@@ -18,6 +18,7 @@
 		<script src="../../../assets/product/js/jssor.slider-22.2.16.min.js" type="text/javascript"></script>
 	</head>
 	<body>
+	<iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
 		<!-- Main Navigation 
 			================================================== -->
 		<nav id="tf-menu" class="navbar navbar-default navbar-fixed-top">
@@ -102,7 +103,7 @@
 					<!-- contact form outer row with centered text-->
 					<div class="col-md-10 col-md-offset-1">
 						<!-- col 10 with offset 1 to centered -->
-						<form id="contact-form" class="form" name="sentMessage" novalidate>
+						<form id="gform" class="form" action="https://script.google.com/macros/s/AKfycbwEMiccboGGXXSR-l1c4-4WjoFUuG-U5amCuzBGRwmKB0JshtSd/exec" method="POST" target="dummyframe">
 							<!-- form wrapper -->
 							<div class="row">
 								<!-- nested inner row -->
@@ -110,7 +111,7 @@
 								<div class="col-md-4">
 									<div class="form-group">
 										<!-- Your name input -->
-										<input type="text" autocomplete="off" class="form-control" placeholder="Name *" id="name" required data-validation-required-message="Please enter your name.">
+										<input type="text" name="name" autocomplete="off" class="form-control" placeholder="Name *" id="name" required data-validation-required-message="Please enter your name.">
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
@@ -118,7 +119,7 @@
 								<div class="col-md-4">
 									<div class="form-group">
 										<!-- Your email input -->
-										<input type="text" autocomplete="off" class="form-control" placeholder="Phone No. *" id="phone" required data-validation-required-message="Please enter your phone no.">
+										<input type="text" name="phone" autocomplete="off" class="form-control" placeholder="Phone No. *" id="phone" required data-validation-required-message="Please enter your phone no.">
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
@@ -126,7 +127,7 @@
 								<div class="col-md-4">
 									<div class="form-group">
 										<!-- Your email input -->
-										<input type="email" autocomplete="off" class="form-control" placeholder="Email *" id="email" required data-validation-required-message="Please enter your email address.">
+										<input type="email" name="email" autocomplete="off" class="form-control" placeholder="Email *" id="email" required data-validation-required-message="Please enter your email address.">
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
